--- a/web-app/src/components/Overlays/FilterOverlay/FilterOverlay.css
+++ b/web-app/src/components/Overlays/FilterOverlay/FilterOverlay.css
@@ -11,6 +11,8 @@
     color: #6b6b76;
     text-transform: uppercase;
     outline: none;
+    border:2px solid rgba(0,0,0,0.2)
+
 }
 
 /*styles for switch buttons*/
