--- a/web-app/src/components/Overlays/TileSelect/TileSelect.css
+++ b/web-app/src/components/Overlays/TileSelect/TileSelect.css
@@ -1,18 +1,14 @@
-.chart-panel {
+.tileSelect {
     position: absolute;
-    top: 0;
+    bottom:0;
     right: 0;
-    max-width: 320px;
     background: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    padding: 12px 24px;
+    padding: 8px 16px;
     margin: 20px;
-    font-size: 13px;
-    line-height: 2;
     color: #6b6b76;
     text-transform: uppercase;
     outline: none;
     border:2px solid rgba(0,0,0,0.2)
-
   }
   
