--- a/web-app/src/components/Overlays/PlayButton/PlayButton.css
+++ b/web-app/src/components/Overlays/PlayButton/PlayButton.css
@@ -1,4 +1,4 @@
-.drawingTool {
+.playButton {
     position: absolute;
     bottom:0;
     right: 0;
@@ -6,11 +6,9 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
     padding: 8px 16px;
     margin: 20px;
-    margin-right:100px ;
     color: #6b6b76;
     text-transform: uppercase;
     outline: none;
-    border:2px solid rgba(0,0,0,0.2);
-    cursor:pointer
-
+    border:2px solid rgba(0,0,0,0.2)
   }
+  
