--- a/web-app/src/components/Overlays/TileSelect/TileSelect.css
+++ b/web-app/src/components/Overlays/TileSelect/TileSelect.css
@@ -6,6 +6,7 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
     padding: 8px 16px;
     margin: 20px;
+    margin-right:180px;
     color: #6b6b76;
     text-transform: uppercase;
     outline: none;
