--- a/web-app/src/components/Overlays/TileSelect/TileSelect.css
+++ b/web-app/src/components/Overlays/TileSelect/TileSelect.css
@@ -1,15 +1,6 @@
 .tileSelect {
-    position: absolute;
-    bottom:0;
-    right: 0;
-    background: #fff;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
     padding: 8px 16px;
-    margin: 20px;
-    margin-right:180px;
-    color: #6b6b76;
-    text-transform: uppercase;
-    outline: none;
-    border:2px solid rgba(0,0,0,0.2)
-  }
+    margin:20px;
+    margin-left:180px;
+}
   
