--- a/web-app/src/components/Overlays/Overlay.css
+++ b/web-app/src/components/Overlays/Overlay.css
@@ -5,6 +5,7 @@
     background: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,0.3);
     padding: 8px 16px;
+    margin-bottom:10px;
     color: #6b6b76;
     text-transform: uppercase;
     outline: none;
