--- a/web-app/src/components/Overlays/ChartOverlay/ChartOverlay.css
+++ b/web-app/src/components/Overlays/ChartOverlay/ChartOverlay.css
@@ -12,7 +12,9 @@
     color: #6b6b76;
     text-transform: uppercase;
     outline: none;
-    border:2px solid rgba(0,0,0,0.2)
+    border:2px solid rgba(0,0,0,0.2);
+    border-radius: 15px;
+
 
   }
   
