--- a/web-app/src/components/Overlays/Overlay.css
+++ b/web-app/src/components/Overlays/Overlay.css
@@ -9,5 +9,7 @@
     color: #6b6b76;
     text-transform: uppercase;
     outline: none;
-    border:2px solid rgba(0,0,0,0.2)
+    border:2px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
+
 }
